[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RankBasedMonteCarlo"
version = "0.1.4"
description = "A set of Monte Carlo based tools to create test statistics for four non-parametric rank-based tests: Mann-Whitney (MW), Kruskal-Wallis (KW), Kolmogorov-Smirnov (KS) and Kuiper (K)."
license = "MIT"
authors = [
  { name="Ben Smith", email="bosmith@unomaha.edu" },
]
maintainers = [
  { name="Ben Smith", email="bosmith@unomaha.edu" },
]
readme = "README.md"
homepage = "https://github.com/tazzben/RankBasedMonteCarlo"
repository = "https://github.com/tazzben/RankBasedMonteCarlo"
keywords = ["Monte Carlo", "Rank based", "Statistics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "tqdm>=4.26.0",
]

[project.urls]
"Homepage" = "https://github.com/tazzben/RankBasedMonteCarlo"
"Bug Tracker" = "https://github.com/tazzben/RankBasedMonteCarlo/issues"